--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,17 @@ colorama==0.4.6
 dill==0.3.8
 Flask==3.0.2
 Flask-Cors==4.0.0
+iniconfig==2.0.0
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mccabe==0.7.0
+packaging==23.2
 platformdirs==4.2.0
+pluggy==1.4.0
 pylint==3.0.3
+pytest==8.0.1
 pytube==15.0.0
 tomlkit==0.12.3
 Werkzeug==3.0.1
